syntax = "proto3";

package cnc;

service CnC {
    rpc Ping (PingMsg) returns (Response) {}
}

message Response {
    bool has_update = 1;
    string url = 2;
    bytes checksum = 3;
}

message PingMsg {
    bool ok = 1;
    string statusMessage = 2;
    string clientId = 3;
}
